[package]
name = "codecrafters-http-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.88"

[dependencies]
anyhow = "1.0"                                # error handling
thiserror = "2.0"                             # error handling
mockall = "0.13.1"
clap = { version = "4.5.21", features = ["derive"] }
flate2 = "1.0.35"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
